Fixed colors to be same as apple dark mode

--- a/styles.css
+++ b/styles.css
@@ -13,18 +13,18 @@ body {
     font-family: Arial, sans-serif;
     text-align: center;
     font-size: clamp(14px, 1.2vw, 18px);
-    background-color: black;
+    background-color: rgb(20, 20, 20);
     margin: 0;
 }
 
 .header {
-    background-color: black;
+    background-color: rgb(20, 20, 20);
     position: fixed;
     z-index: 1000;
     top: 0;
     width: 100%;
     padding: 20px 0 0;
-    border-bottom: 2px solid #3A3A3C;
+    border-bottom: 2px solid rgb(45, 45, 47);
 }
 
 .header-inner {
@@ -119,7 +119,7 @@ h1 {
 }
 
 .guess-row-container {
-    border: 2px solid #3A3A3C;
+    border: 2px solid rgb(45, 45, 47);
     border-radius: 10px;
     padding: 10px;
     margin: 10px 0;
@@ -132,7 +132,7 @@ h1 {
 .team-name-box {
     grid-column: 1 / -1;
     padding: 10px;
-    border: 1px solid #3A3A3C;
+    border: 1px solid rgb(45, 45, 47);
     border-radius: 10px;
     font-size: 16px;
     text-align: center;
@@ -143,7 +143,7 @@ h1 {
 .clue-box,
 .guess-box {
     padding: 10px;
-    border: 1px solid #3A3A3C;
+    border: 1px solid rgb(45, 45, 47);
     border-radius: 10px;
     font-size: 14px;
     font-weight: bold;
@@ -168,7 +168,7 @@ img.sport-icon {
 }
 
 .clue-box {
-    border-color: #3A3A3C;
+    border-color: rgb(45, 45, 47);
     border-width: 2px;
     color: white;
 }
@@ -230,17 +230,17 @@ img.sport-icon {
 }
 
 .guess-box.gray {
-    background-color: #3A3A3C;
+    background-color: rgb(45, 45, 47);
     color: white;
 }
 
 .guess-box.placeholder {
-    background-color: #3A3A3C;
+    background-color: rgb(45, 45, 47);
     color: transparent;
 }
 
 .team-name-box.placeholder {
-    background-color: #3A3A3C;
+    background-color: rgb(45, 45, 47);
     color: white;
     font-size: 16px;
 }
@@ -249,8 +249,8 @@ input {
     width: 75%;
     padding: 10px;
     margin: 10px 10px 10px 0;
-    border: 2px solid #3A3A3C;
-    background-color: black;
+    border: 2px solid rgb(45, 45, 47);
+    background-color: rgb(20, 20, 20);
     color: white;
     border-radius: 10px;
     font-size: clamp(14px, 1.2vw, 16px);
@@ -269,9 +269,9 @@ input[list] {
 
 button {
     height: 43px;
-    background-color: black;
+    background-color: rgb(20, 20, 20);
     color: white;
-    border: 2px solid #3A3A3C;
+    border: 2px solid rgb(45, 45, 47);
     border-radius: 10px;
     font-size: clamp(14px, 1vw, 16px);
     padding: clamp(8px, 1vw, 12px) clamp(12px, 1.5vw, 20px);
@@ -280,11 +280,11 @@ button {
 }
 
 button:hover {
-    background-color: #3A3A3C;
+    background-color: rgb(45, 45, 47);
 }
 
 button:active {
-    background-color: black;
+    background-color: rgb(20, 20, 20);
 }
 
 #result {
@@ -311,8 +311,8 @@ button:active {
     transform: translate(-50%, 0);
     width: 90%;
     max-width: 800px;
-    background-color: black;
-    border: 2px solid #3A3A3C;
+    background-color: rgb(20, 20, 20);
+    border: 2px solid rgb(45, 45, 47);
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -337,7 +337,7 @@ button:active {
 .modal-header {
     position: sticky;
     top: 0;
-    background-color: black;
+    background-color: rgb(20, 20, 20);
     padding: 20px 40px 10px;
     z-index: 1;
 }
@@ -359,7 +359,7 @@ button:active {
 }
 
 .modal-content {
-    background-color: black;
+    background-color: rgb(20, 20, 20);
     padding: 10px 50px;
     border-radius: 10px;
     width: 100%;
@@ -400,7 +400,7 @@ button:active {
         padding-top: 325px;
     }
     .guess-row-container {
-        border: 2px solid #3A3A3C;
+        border: 2px solid rgb(45, 45, 47);
         border-radius: 10px;
         padding: 10px;
         margin: 10px 0;
